refactor from Arrays.asList to List.of